# otto-recommendation-system

./: README.md
classic/: pyproject.toml
classic/notebooks/: Candidates.ipynb  Covisitation.ipynb  Matrix_Factorization.ipynb  Preparation.ipynb  Word2Vec.ipynb  XGBoost.ipynb
classic/src/data/: candidates_chris.py
classic/src/otto_src/: my_split.py
gnn/: gnn.ipynb
